# ChangeLog for dev-ruby/fix_microsoft_links
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*fix_microsoft_links-0.1.4 (13 Sep 2013)

  13 Sep 2013; Hans de Graaff <graaff@gentoo.org>
  +fix_microsoft_links-0.1.4.ebuild:
  Version bump.

*fix_microsoft_links-0.1.3 (26 Jul 2013)

  26 Jul 2013; Hans de Graaff <graaff@gentoo.org>
  +fix_microsoft_links-0.1.3.ebuild:
  Version bump.

*fix_microsoft_links-0.1.2 (16 Jul 2013)

  16 Jul 2013; Hans de Graaff <graaff@gentoo.org>
  +fix_microsoft_links-0.1.2.ebuild, +metadata.xml:
  Initial import.
