@@ -1,3 +1,1 @@
-DIST fix_microsoft_links-0.1.2.gem 4096 SHA256 ae78f0cdf7f153afb996fe2f5ea2729c05dbac1f3e293d1c5b2b1be78201ed59 SHA512 8597cbfa378291b1acbd7582663214e4888ab58a52f21af4f085ebc347752f2273cf6567a25306f0fd077fa980d5f701cbb14276183c900672fcbeda0ffae73b WHIRLPOOL cd253bfb28b77aed4a0949d843045bbca1d84b30ef8ec33c5d167ed7ce7327c64b100a5e705996e7eccb0f2ad0ec2de87072dd3ff5be57460e2ff2d45da36795
-DIST fix_microsoft_links-0.1.3.gem 4096 SHA256 405794f0e855722231aa569d2fe54f0a19309176a1606279c40869198a6af7f2 SHA512 725cb1f2aa71df6a8f500d6cf55eb5173e1dc04b2db5ea4d6a250390b21521998fb1f04059409e68499a4a9ad1f6c0eb795d45c000f22a7099f0cc777238cd87 WHIRLPOOL bee951b060f10f4e50b8a1198fafe66c4a36b00d51af960ca3366c2014f92c89109de42cb25732a39144c8f086b089a3e4518e1d550affef7456dd5ade1fadd4
 DIST fix_microsoft_links-0.1.4.gem 4096 SHA256 33480fdb8a5ac48e21e20264f58883e4721b97bbc49603090409a26c4872e58a SHA512 751ed059d04cd2cb7ea2ce6d7d731113677bad672de390dd511e39eeeca14236f5aa4d12388b67a69c0e8d4338b98a5e3230eb66fb9ad048d35b094c2bda8a00 WHIRLPOOL a602e98c65c09097758f59a97064e09646ae9cad9093b678c0199df5f9db16aae33b9e006e3a7fbe21ba1c96fa8fd5fe18023ffb04bc0eae4f75fe712d44039a
