@@ -1,24 +1,0 @@
-# Copyright 1999-2013 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-EAPI=5
-USE_RUBY="ruby19"
-
-RUBY_FAKEGEM_DOCDIR="doc"
-RUBY_FAKEGEM_TASK_DOC=""
-RUBY_FAKEGEM_TASK_TEST=""
-
-RUBY_FAKEGEM_EXTRAINSTALL="init.rb"
-
-inherit ruby-fakegem
-
-DESCRIPTION="Fixes redirects to login pages when a user clicks a link to your site from a Microsoft application"
-HOMEPAGE="https://github.com/spilliton/fix_microsoft_links"
-LICENSE="MIT"
-
-KEYWORDS="~amd64"
-SLOT="0"
-IUSE="doc"
-
-ruby_add_rdepend ">=dev-ruby/rack-1.1.1"
