@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/fix_microsoft_links
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  02 Jul 2014; Hans de Graaff <graaff@gentoo.org>
+  -fix_microsoft_links-0.1.2.ebuild, -fix_microsoft_links-0.1.3.ebuild:
+  Cleanup.
 
 *fix_microsoft_links-0.1.4 (13 Sep 2013)
 
